# classic-socket-chat

./: CMakeLists.txt  README.md  clangtidy.sh
src/: client.cpp  server.cpp  sockutils.hpp
